# LearnGIS

./: CMakeLists.txt  LICENSE  README.md
QGIS_demo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  vectormaplayer.cpp  vectormaplayer.h
map_data/SCSENC_ed2_reissue2/ENC_ROOT/: EA200003.000  EA200004.000
map_data/s57/: CATALOG.031  EA200002.000
